test/compiler/as3/Definitions/Function/StaticNameErr17.err

[Compiler] Error #1094: Syntax error: A string literal must be terminated before the line break.
   StaticNameErr17.as, Ln 5, Col 22: 
       static function a'b () {}
   .....................^

[Compiler] Error #1084: Syntax error: expecting leftparen before end of program.
   StaticNameErr17.as, Ln 7, Col 1: 
   }
   ^

[Compiler] Error #1084: Syntax error: expecting identifier before end of program.
   StaticNameErr17.as, Ln 7, Col 1: 
   }
   ^

[Compiler] Error #1084: Syntax error: expecting rightparen before end of program.
   StaticNameErr17.as, Ln 7, Col 1: 
   }
   ^

[Compiler] Error #1084: Syntax error: expecting rightbrace before end of program.
   StaticNameErr17.as, Ln 7, Col 1: 
   }
   ^

[Compiler] Error #1084: Syntax error: expecting rightbrace before end of program.
   StaticNameErr17.as, Ln 7, Col 1: 
   }
   ^

6 errors found
